crates/phux-protocol/tests/snapshots/frame_wire_snapshots__snap_attached_realistic_graph.snap
---
source: crates/phux-protocol/tests/frame_wire_snapshots.rs
expression: dump_frame(&frame)
---
00000000 | 00 00 01 2b 81 00 00 00  02 00 00 00 01 00 00 00 |...+............
00000010 | 04 77 6f 72 6b 01 00 00  00 0a 00 00 00 00 65 53 |.work.........eS
00000020 | f1 00 00 02 00 01 00 00  00 02 00 00 00 08 70 65 |..............pe
00000030 | 72 73 6f 6e 61 6c 01 00  00 00 1e 00 00 00 00 65 |rsonal.........e
00000040 | 53 f2 f4 00 01 00 00 00  00 00 03 00 00 00 0a 00 |S...............
00000050 | 00 00 01 00 00 00 00 00  04 63 6f 64 65 01 00 00 |.........code...
00000060 | 00 64 01 01 00 3f 00 00  00 00 00 00 00 64 00 00 |.d...?.......d..
00000070 | 00 00 65 00 00 00 14 00  00 00 01 00 01 00 00 00 |..e.............
00000080 | 04 6c 6f 67 73 01 00 00  00 66 01 00 00 00 00 66 |.logs....f.....f
00000090 | 00 00 00 1e 00 00 00 02  00 00 00 00 00 07 73 63 |..............sc
000000a0 | 72 61 74 63 68 01 00 00  00 67 01 00 00 00 00 67 |ratch....g.....g
000000b0 | 00 00 00 04 00 00 00 64  00 00 00 0a 00 50 00 18 |.......d.....P..
000000c0 | 01 00 00 00 06 65 64 69  74 6f 72 01 00 00 00 0b |.....editor.....
000000d0 | 2f 68 6f 6d 65 2f 75 2f  73 72 63 00 00 00 65 00 |/home/u/src...e.
000000e0 | 00 00 0a 00 50 00 18 00  01 00 00 00 0b 2f 68 6f |....P......../ho
000000f0 | 6d 65 2f 75 2f 73 72 63  00 00 00 66 00 00 00 14 |me/u/src...f....
00000100 | 00 a0 00 30 00 00 00 00  00 67 00 00 00 1e 00 50 |...0.....g.....P
00000110 | 00 18 00 01 00 00 00 07  2f 68 6f 6d 65 2f 75 00 |......../home/u.
00000120 | 00 00 01 00 00 00 0a 00  00 00 64 00 00 00 01    |..........d....
