crates/phux-protocol/tests/snapshots/frame_wire_snapshots__snap_attached_with_initial_diff.snap
---
source: crates/phux-protocol/tests/frame_wire_snapshots.rs
expression: dump_frame(&frame)
---
00000000 | 00 00 00 2a 81 00 00 00  01 00 00 00 01 00 00 00 |...*............
00000010 | 01 00 04 00 01 00 00 00  01 01 00 00 00 00 00 00 |................
00000020 | 00 01 01 00 00 00 48 01  02 00 00 00 00 00       |......H.......
