crates/phux-protocol/tests/snapshots/frame_wire_snapshots__snap_bell.snap
---
source: crates/phux-protocol/tests/frame_wire_snapshots.rs
expression: "dump_frame(&FrameKind::Bell { pane_id: 0x0000_00BE, })"
---
00000000 | 00 00 00 05 b0 00 00 00  be                      |.........
