crates/phux-protocol/tests/snapshots/frame_wire_snapshots__snap_delete_metadata_global.snap
---
source: crates/phux-protocol/tests/frame_wire_snapshots.rs
expression: dump_frame(&frame)
---
00000000 | 00 00 00 19 52 00 00 00  11 02 00 00 00 0f 70 68 |....R.........ph
00000010 | 75 78 2e 65 78 61 6d 70  6c 65 2f 76 31          |ux.example/v1
