crates/phux-protocol/tests/snapshots/frame_wire_snapshots__snap_detached.snap
---
source: crates/phux-protocol/tests/frame_wire_snapshots.rs
expression: "dump_frame(&FrameKind::Detached)"
---
00000000 | 00 00 00 01 82                                   |.....
