crates/phux-protocol/tests/snapshots/frame_wire_snapshots__snap_error_internal_max_code.snap
---
source: crates/phux-protocol/tests/frame_wire_snapshots.rs
expression: dump_frame(&frame)
---
00000000 | 00 00 00 09 c1 02 04 02  ff ff 03 04 00          |.............
