crates/phux-protocol/tests/snapshots/frame_wire_snapshots__snap_error_session_not_found.snap
---
source: crates/phux-protocol/tests/frame_wire_snapshots.rs
expression: dump_frame(&frame)
---
00000000 | 00 00 00 20 c1 02 04 02  00 66 03 04 17 6e 6f 20 |... .....f...no 
00000010 | 73 75 63 68 20 73 65 73  73 69 6f 6e 3a 20 27 77 |such session: 'w
00000020 | 6f 72 6b 27                                      |ork'
