crates/phux-protocol/tests/snapshots/frame_wire_snapshots__snap_frame_ack_zero.snap
---
source: crates/phux-protocol/tests/frame_wire_snapshots.rs
expression: dump_frame(&frame)
---
00000000 | 00 00 00 0e 21 00 00 00  00 01 00 00 00 00 00 00 |....!...........
00000010 | 00 00                                            |..
